# Start

./: tesst .cpp
Desktop/Sem 1.2/Experiment/: tEST 2.cpp
Desktop/Sem 1.2/VS CODES/: Age Voting.cpp  CMakeLists.txt  Right Age voting.cpp  TEST 1.cpp
Desktop/Sem 1.2/VS CODES/tests/: main.cpp
